[package]
name = "oxide-auth-db"
version = "0.1.0"
authors = ["liujing <liujingb@mail.taiji.com.cn>"]
repository = "https://github.com/HeroicKatora/oxide-auth.git"
description = "An implement of DB registrar with configurable databases."
readme = "Readme.md"
keywords = ["oauth", "server", "oauth2", "redis"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
oxide-auth = { version = "0.5.0-preview.0", path = "../oxide-auth" }
once_cell = "1.3.1"
rand = "0.7.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rust-argon2 = "0.8.2"
url = "2"
anyhow = "1.0"
tokio = { version = "0.2", features = ["full"] }
reqwest = "^0.9"
log = "0.4"
log4rs = "0.10.0"
redis = { version = "0.20", optional = true, features = ["r2d2", "cluster", "connection-manager", "tokio-comp"] }
cdrs = { version = "2", optional = true }
cdrs_helpers_derive = { version = "0.4", optional = true }


[features]
default = ["with-cluster-redis-scylla"]
with-redis = ["redis"]
with-redis-cluster = ["redis"]
with-scylla = ["cdrs", "cdrs_helpers_derive"]
with-redis-scylla = ["redis", "cdrs", "cdrs_helpers_derive"]
with-cluster-redis-scylla = ["redis", "cdrs", "cdrs_helpers_derive"]
